--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "dedoc/scramble": "^0.12.34",
+        "guzzlehttp/guzzle": "^7.10",
         "hekmatinasser/verta": "^8.5",
+        "kavenegar/php": "^1.2",
         "laravel-lang/lang": "^14.0",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
